<resources>
    <string name="app_name">Family History Client</string>
    <string name="log_in">Log In</string>
    <string name="ip_address">IP Address</string>
    <string name="port_number">Port Number</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name_person">First Name</string>
    <string name="last_name_person">Last Name</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="register">Register</string>
    <string name="title_activity_map">Event View</string>
    <string name="search">Search</string>
    <string name="birth_events">Birth Events</string>
    <string name="filter_birth_events">Filter Birth Events</string>
    <string name="death_events">Death Events</string>
    <string name="filter_death_events">Filter Death Events</string>
    <string name="baptism_events">Baptism Events</string>
    <string name="filter_baptism_events">Filter Baptism Events</string>
    <string name="marriage_events">Marriage Events</string>
    <string name="filter_marriage_events">Filter Marriage Events</string>
    <string name="paternal_events">Paternal Events</string>
    <string name="filter_paternal_people_events">Filter paternal People/Events</string>
    <string name="maternal_events">Maternal Events</string>
    <string name="filter_maternal_people_events">Filter Maternal People/Events</string>
    <string name="male_events">Male Events</string>
    <string name="filter_male_events">Filter Male Events</string>
    <string name="female_events">Female Events</string>
    <string name="filter_female_events">Filter Female Events</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="toggle_life_story_line">Toggle Life Story Line</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="toggle_family_tree_lines">Toggle Family Tree Lines</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="toggle_spouse_lines">Toggle Spouse Lines</string>
    <string name="map_style">Map Style</string>
    <string name="adjust_map_style">Adjust Map Style</string>
    <string name="resync_user_data">Resync User Data</string>
    <string name="resync_data_from_server">Resync Data From Server</string>
    <string name="logout">Logout</string>
    <string name="return_to_login_screen">Return to Login Screen</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="settings_menu">Settings</string>
    <string name="filter_menu">Filter</string>
    <string name="search_menu">Search</string>
    <string name="click_on_marker_to_see_event_details">Click on marker to see event details</string>
    <string name="icon">icon</string>
</resources>
