<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="e.kevin.familyhistoryclient.Activities.FilterActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="334dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toTopOf="@+id/birth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/baptismSwitch"
            android:layout_width="47dp"
            android:layout_height="34dp"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/lifeStoryTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lifeStoryTitle"
            app:layout_constraintVertical_bias="0.51" />

        <TextView
            android:id="@+id/lifeStoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baptism_events"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lifeStoryDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_baptism_events"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintTop_toBottomOf="@+id/lifeStoryTitle" />
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/birth"
        android:layout_width="334dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toTopOf="@+id/death"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout">

        <Switch
            android:id="@+id/birthSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/birthTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/birthTitle"
            app:layout_constraintVertical_bias="0.51" />

        <TextView
            android:id="@+id/birthTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_events"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/birthDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_birth_events"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintTop_toBottomOf="@+id/birthTitle" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/death"
        android:layout_width="334dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toTopOf="@+id/marriage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birth">

        <Switch
            android:id="@+id/deathSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/deathTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/deathTitle"
            app:layout_constraintVertical_bias="0.51" />

        <TextView
            android:id="@+id/deathTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/death_events"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deathDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_death_events"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintTop_toBottomOf="@+id/deathTitle" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/marriage"
        android:layout_width="334dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toTopOf="@+id/paternal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/death">

        <Switch
            android:id="@+id/marriageSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/marriageTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/marriageTitle"
            app:layout_constraintVertical_bias="0.51" />

        <TextView
            android:id="@+id/marriageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marriage_events"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/marriageDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_marriage_events"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintTop_toBottomOf="@+id/marriageTitle" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/paternal"
        android:layout_width="334dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toTopOf="@+id/maternal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/marriage">

        <Switch
            android:id="@+id/paternalSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/paternalTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/paternalTitle"
            app:layout_constraintVertical_bias="0.51" />

        <TextView
            android:id="@+id/paternalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paternal_events"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/paternalDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_paternal_people_events"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintTop_toBottomOf="@+id/paternalTitle" />
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/maternal"
        android:layout_width="334dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toTopOf="@+id/male"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paternal">

        <Switch
            android:id="@+id/maternalSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/maternalTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/maternalTitle"
            app:layout_constraintVertical_bias="0.51" />

        <TextView
            android:id="@+id/maternalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maternal_events"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/maternalDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_maternal_people_events"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintTop_toBottomOf="@+id/maternalTitle" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/male"
        android:layout_width="334dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toTopOf="@+id/female"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maternal">

        <Switch
            android:id="@+id/maleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/maleTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/maleTitle"
            app:layout_constraintVertical_bias="0.51" />

        <TextView
            android:id="@+id/maleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_events"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/maleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_male_events"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintTop_toBottomOf="@+id/maleTitle" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/female"
        android:layout_width="334dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/male">

        <Switch
            android:id="@+id/femaleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/femaleTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/femaleTitle"
            app:layout_constraintVertical_bias="0.51" />

        <TextView
            android:id="@+id/femaleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_events"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/femaleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_female_events"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintTop_toBottomOf="@+id/femaleTitle" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
